--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,5 +9,6 @@
     display: flex;
     justify-content: space-between;
     font-size: clamp(0.62rem, 1vw, 1rem);
+    margin-block-start: 50px;
   }
 </style>
