--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,8 +32,8 @@ const { title } = Astro.props;
   :root {
     --clr-bg-gradient-night: hsla(266, 28%, 5%, 1);
     --clr-bg-gradient-oxford-blue: hsla(208, 88%, 10%, 1);
-    --clr-gradient-start: #30c8e1;
-    --clr-gradient-end: #ec368d;
+    --clr-gradient-start: #00bbbd;
+    --clr-gradient-end: #d70dd7;
     --clr-highlight: #470ff4;
     --top-margin: 50px;
     --side-margin: clamp(10px, 5vw, 64px);
