--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ import aboutImg from "../assets/neural-web.webp";
   h1 {
     background: linear-gradient(
       to right,
-      var(--clr-gradient-start),
+      var(--clr-gradient-start) 30%,
       var(--clr-gradient-end)
     );
     background-clip: text;
