--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -71,7 +71,7 @@ import Layout from "../layouts/Layout.astro";
   <style>
     .header {
       position: relative;
-      overflow: hidden;
+      /* overflow: hidden; */
       min-height: 30vh;
       display: flex;
       flex-direction: column;
@@ -82,6 +82,7 @@ import Layout from "../layouts/Layout.astro";
       position: absolute;
       width: 500px;
       height: auto;
+      z-index: 0;
     }
 
     h1 {
@@ -109,6 +110,8 @@ import Layout from "../layouts/Layout.astro";
       margin-block-end: 20px;
       border-bottom: 2px solid var(--clr-gradient-start);
       width: fit-content;
+      position: relative;
+      z-index: 1;
     }
 
     p {
