--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,6 +50,13 @@ import aboutImg from "../assets/neural-web.webp";
 </Layout>
 
 <style>
+  h1 {
+    margin-inline: auto;
+  }
+  h1::after {
+    display: none;
+  }
+
   .news-contact-wrapper {
     display: flex;
     flex-wrap: wrap;
