--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -98,6 +98,12 @@ import MenuClose from "../../public/assets/menu-close.svg";
     cursor: pointer;
   }
 
+  button,
+  a {
+    position: relative;
+    z-index: 1;
+  }
+
   /* coupled with script breakpoint */
   @media (width < 1030px) {
     button {
