--- a/src/components/Partner.astro
+++ b/src/components/Partner.astro
@@ -1,15 +1,25 @@
 ---
 type Props = {
-  name: string;
-  imgSrc: string;
-  desc: string;
+  orgName?: string;
+  imgSrc?: string;
+  desc?: string;
 };
 
-const { name, imgSrc, desc } = Astro.props;
+const { orgName, imgSrc, desc } = Astro.props;
 ---
 
-<div>
-  <h2>{name}</h2>
+<div class="partner">
   <img src={imgSrc} alt="" width="150px" />
-  <p>{desc}</p>
+  <div>
+    <h2>{orgName || "title"}</h2>
+    <p>{desc || "description"}</p>
+  </div>
 </div>
+
+<style>
+  .partner {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+  }
+</style>
