--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,6 +68,7 @@ const { title } = Astro.props;
   textarea,
   select {
     font: inherit;
+    color: inherit;
   }
 
   p,
@@ -109,9 +110,9 @@ const { title } = Astro.props;
   }
 
   h1 {
-    font-size: clamp(2.5rem, 4.5vw, 5rem);
+    font-size: clamp(2.5rem, 4.25vw, 4rem);
+    text-align: center;
   }
-
   h2 {
     font-size: clamp(1.5rem, 2.5vw, 3rem);
   }
@@ -146,11 +147,8 @@ const { title } = Astro.props;
   }
 
   .btn-secondary {
-    /* background-color: var(--clr-highlight); */
-    /* border: 2px solid var(--clr-highlight); */
     color: var(--clr-gradient-start);
     font-size: 0.85rem;
-    /* padding: 10px; */
     padding: 0;
   }
 </style>
