--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -28,6 +28,8 @@ import Hero from "../components/Hero.astro";
   .contact-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 75px;
   }
 
   .contact-information {
