updated everything based on client feedback recieved on 3-2-2025

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -49,11 +49,15 @@
 </form>
 
 <style>
-  :user-valid {
+  /* :user-valid {
     border: 1px solid green;
   }
   :user-invalid {
     border: 1px solid red;
+  } */
+
+  button {
+    border: none;
   }
 
   form {
