--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,10 @@ import Hero from "../components/Hero.astro";
 ---
 
 <Layout title="Contact Us">
-  <Hero heading="Contact Us" />
+  <Hero
+    heading="Contact Us"
+    subHeading="For further information regarding our research initiatives and ongoing projects, please consider reaching out."
+  />
   <div class="contact-container">
     <ContactForm />
     <div class="contact-information">
