--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,8 @@ import MenuClose from "../../public/assets/menu-close.svg";
       </button>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/research">Research</a></li>
+        <li><a href="/vision">Our Vision</a></li>
         <li><a href="/news">News</a></li>
         <li><a href="/partners">Partners</a></li>
         <li><a href="/contact">Contact</a></li>
@@ -89,7 +90,7 @@ import MenuClose from "../../public/assets/menu-close.svg";
 
   ul {
     display: flex;
-    gap: 70px;
+    gap: 100px;
     list-style-type: none;
   }
 
