--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ const { heading, subHeading } = Astro.props;
 
 <div>
   <h1>{heading}</h1>
-  {subHeading && <h2>{subHeading}</h2>}
+  <h2>{subHeading}</h2>
 </div>
 
 <style>
@@ -27,26 +27,13 @@ const { heading, subHeading } = Astro.props;
     position: relative;
     width: fit-content;
     margin-block-start: -50px;
-  }
-
-  h1::after {
-    content: "";
-    background: linear-gradient(
-      to right,
-      var(--clr-gradient-start),
-      var(--clr-gradient-end)
-    );
-    width: 100%;
-    height: 2px;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
+    border-bottom: 2px solid white;
   }
 
   h2 {
     font-size: clamp(1rem, 1.5vw, 1.5rem);
     max-width: 75ch;
     text-align: center;
+    color: var(--clr-light);
   }
 </style>
