fixes errors from build and adjusts research page

--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
-import Image from "astro/components/Image.astro";
+import { Image } from "astro:assets";
 import kcnqImg from "../assets/kcnqimgedit.webp";
 ---
 
