fixes margin issue on vision page

--- a/src/pages/vision.astro
+++ b/src/pages/vision.astro
@@ -149,6 +149,10 @@ import brainScanImg from "../assets/brain-scans.webp";
       .end {
         order: 2;
       }
+      .content-section,
+      .img-container {
+        margin-bottom: 0px;
+      }
     }
   </style>
 </Layout>
