--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -139,14 +139,14 @@ const { title } = Astro.props;
   /* buttons */
 
   .btn {
-    padding: 21px;
+    padding: 15px;
     border-radius: var(--btn-radius);
     width: fit-content;
   }
 
   .btn-primary {
-    /* border: 2px solid var(--clr-darkest); */
-    background-color: var(--clr-darkest);
+    background-color: transparent;
+    border: 2px solid var(--clr-light);
   }
 
   .btn-secondary {
