fixes buttons on home page and removes border for headers

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -27,7 +27,7 @@ const { heading, subHeading } = Astro.props;
     position: relative;
     width: fit-content;
     margin-block-start: -50px;
-    border-bottom: 2px solid white;
+    /* border-bottom: 1px solid var(--clr-lightest); */
   }
 
   h2 {
