--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,9 @@ import aboutImg from "../assets/neural-web.webp";
           <span>Helping Patients</span> Suffering from Neurological Disorders by
           Developing More Efficacious Drugs
         </h2>
-        <a href="/about" class="btn btn-primary">Learn More</a>
+        <a href="/vision" class="btn btn-primary">Our Mission</a>
+        <a href="/research" class="btn btn-primary research-btn">Our Research</a
+        >
       </div>
       <Image src={heroImg} alt="" class="img hero-img" />
     </section>
@@ -27,10 +29,7 @@ import aboutImg from "../assets/neural-web.webp";
           At NeuroImpact Therapeutics, we are dedicated to transforming the
           lives of patients suffering from neurological disorders
         </p>
-
-        <a href="/research" class="btn btn-primary research-btn">Our Research</a
-        >
-        <a href="/vision" class="btn btn-primary">Our Mission</a>
+        <a href="/vision" class="btn btn-primary">Learn More</a>
       </div>
     </section>
   </div>
@@ -54,8 +53,8 @@ import aboutImg from "../assets/neural-web.webp";
   .research-btn {
     background-color: var(--clr-light);
     color: var(--clr-bg-gradient-night);
-
-    margin-right: 24px;
+    font-weight: bold;
+    margin-left: 24px;
   }
   .about a {
     display: inline-block;
