--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -29,17 +29,42 @@ import kcnqImg from "../assets/kcnqimgedit.webp";
           Alzheimer’s and epilepsy.
         </p>
       </div>
-    </div>
-    <div class="img-container">
-      <Image src={kcnqImg} alt="" class="img" />
+      <div class="img-container">
+        <Image src={kcnqImg} alt="" class="img" />
+      </div>
     </div>
   </section>
 
   <style>
-    section {
-      display: flex;
-      align-items: center;
+    .cnt-wrapper {
+      display: grid;
+      gap: 20px;
+      grid-template-columns: 1fr auto;
+      grid-template-rows: auto auto;
+      grid-template-areas:
+        "text1 img"
+        "text2 img";
+      align-items: start;
     }
+
+    .cnt-wrapper > .content-section:nth-of-type(1) {
+      grid-area: text1;
+    }
+
+    .cnt-wrapper > .content-section:nth-of-type(2) {
+      grid-area: text2;
+    }
+
+    .cnt-wrapper > .img-container {
+      grid-area: img;
+      max-width: 600px;
+    }
+
+    .img-container {
+      align-self: center;
+      flex-shrink: 2;
+    }
+
     h2 {
       margin-block-end: 20px;
       border-bottom: 1px solid var(--clr-light);
@@ -48,19 +73,9 @@ import kcnqImg from "../assets/kcnqimgedit.webp";
       z-index: 1;
     }
 
-    p {
-      font-size: 1rem;
-      margin-bottom: 25px;
-    }
-
     .content-section {
-      margin-block-end: 56px;
+      margin-block: 24px;
       max-width: 75ch;
-    }
-
-    .img-container {
-      max-width: 800px;
-      flex-shrink: 2;
     }
 
     .img {
@@ -68,9 +83,15 @@ import kcnqImg from "../assets/kcnqimgedit.webp";
       height: auto;
     }
 
-    @media (width < 1030px) {
-      section {
-        flex-direction: column;
+    @media (max-width: 1100px) {
+      .cnt-wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+        grid-template-areas:
+          "text1"
+          "img"
+          "text2";
+        justify-items: center;
       }
     }
   </style>
