updates content per client request, updates styles for articles and fixes partners page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -18,7 +18,7 @@ import Hero from "../components/Hero.astro";
       </div>
       <div>
         <h2>Email</h2>
-        <p>email@email.com</p>
+        <p>info@neuroimpacttx.com</p>
       </div>
     </div>
   </div>
