--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -13,20 +13,32 @@ import kcnqImg from "../assets/kcnqimgedit.webp";
   <section>
     <div class="cnt-wrapper">
       <div class="content-section">
-        <h2>Transforming Lives Through Targeted Therapeutics</h2>
+        <h2>Advancing Ion Channels Research</h2>
         <p>
-          At NeuroImpact Therapeutics, we are dedicated to transforming the
-          lives of patients suffering from neurological disorders by pioneering
-          the development of targeted, precision-driven therapeutics.
+          Ion channels are specialized proteins located within the membranes of nerve cells (neurons), 
+          playing crucial roles in controlling the flow of ions such as potassium, sodium, calcium, and 
+          chloride. Potassium channels, in particular, are essential for regulating neuronal excitability, 
+          shaping action potentials, and maintaining the balance of electrical signaling in the brain. 
+          Dysfunction of these channels has been implicated in various neurological and psychiatric disorders, 
+          including epilepsy, Alzheimer's disease, ADHD, and schizophrenia. Current treatments often rely on 
+          drugs that broadly target potassium channels across multiple tissues, resulting in non-specific 
+          modulation and severe side effects for patients. At NeuroImpact Therapeutics, we are pioneering 
+          the development of highly precise, tissue-specific ion channel modulators. By selectively targeting 
+          these critical channels, <strong>our innovative approach aims to enhance therapeutic efficacy, significantly 
+          reduce side effects, and greatly improve patient quality of life.</strong>
         </p>
       </div>
       <div class="content-section">
-        <h2>Advancing Ion Channels Research</h2>
         <p>
-          By leveraging cutting-edge structural biology and a deep understanding
-          of ion channels and disease-associated proteins, we aim to unlock
-          novel pathways for treating debilitating conditions such as
-          Alzheimer’s and epilepsy.
+          With an emphasis on the KCNQ family of potassium channels, known for their 
+          pivotal roles in neuronal stability and excitability, our research leverages 
+          recent discoveries that reveal unique structural and functional aspects of 
+          these channels. Unlike conventional therapies, our novel approach employs 
+          cutting-edge structural biology, state-of-the-art computational modeling, 
+          and precision-binding approaches to achieve highly selective modulation of 
+          specific KCNQ subtypes. This targeted methodology holds significant promise 
+          for addressing unmet clinical needs, offering safer, more effective treatment 
+          options tailored to specific neurological and psychiatric conditions.
         </p>
       </div>
       <div class="img-container">
